--- a/install.html
+++ b/install.html
@@ -1,104 +1,116 @@
-function getInstallHtml() {
-  const HANDLER_URL = "https://throbbing-sound-91ad.kelvinadrian-23.workers.dev/";
-
-  return `<!doctype html>
+<!DOCTYPE html>
+<!doctype html>
 <html lang="es">
 <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Instalación Solicitud CIRBE</title>
-  <script src="https://api.bitrix24.com/api/v1/"></script>
+<title>Instalación Solicitud CIRBE</title>
+<script src="https://api.bitrix24.com/api/v1/"></script>
   <style>
     body { font-family: Arial, sans-serif; padding: 24px; }
     .ok { color: #1a7f37; }
     .err { color: #b42318; }
-    .muted { color:#666; }
-    pre { background:#0b1020; color:#cfe3ff; padding:12px; border-radius:8px; overflow:auto; }
+    code { background:#f4f4f4; padding:2px 6px; border-radius:4px; }
   </style>
 </head>
+
+<body style="font-family: Arial; padding: 30px;">
+  <h3>Instalando aplicación...</h3>
 <body>
   <h2>Instalando “Solicitud CIRBE”…</h2>
-  <p id="status" class="muted">Inicializando…</p>
-  <pre id="debug" style="display:none;"></pre>
+  <p id="status">Inicializando…</p>
 
-  <script>
-    const HANDLER_URL = "${HANDLER_URL}";
-    const statusEl = document.getElementById("status");
-    const debugEl  = document.getElementById("debug");
+<script>
+    (function () {
+      // ✅ URL del panel (tu app principal) que se abrirá como pestaña dentro del Deal
+      const HANDLER_URL = "https://cirite-invernomics.pages.dev/index.html";
+
+      function fail(msg) {
+        document.body.innerHTML =
+          "<h2>❌ Error</h2><p>" + msg + "</p><p>Revisa que Bitrix cargue la librería BX24.</p>";
+      }
+
+      if (typeof BX24 === "undefined") {
+        fail("BX24 no disponible.");
+        return;
+      }
+
+      BX24.init(function () {
+        // 1) Registrar pestaña en el Deal
+        BX24.callMethod(
+          "placement.bind",
+          {
+            PLACEMENT: "CRM_DEAL_DETAIL_TAB",
+            HANDLER: HANDLER_URL,
+            TITLE: "Solicitud CIRBE",
+            DESCRIPTION: "Panel CIRBE dentro del Deal",
+          },
+          function (res) {
+            // Si falla el bind, mostramos el error
+            if (res && res.error && res.error()) {
+              fail("placement.bind falló: " + res.error());
+              return;
+            }
+
+            // 2) Finalizar instalación (OBLIGATORIO)
+            BX24.installFinish();
+
+            // 3) Mensaje de OK (opcional)
+            document.body.innerHTML =
+              "<h2>✅ Aplicación instalada correctamente</h2>" +
+              "<p>Puedes cerrar esta ventana y abrir un Deal para ver la pestaña <b>Solicitud CIRBE</b>.</p>";
+    // ✅ ESTE debe ser el handler que se abrirá dentro del Deal (TAB)
+    const HANDLER_URL = "https://throbbing-sound-91ad.kelvinadrian-23.workers.dev/";
 
     function setStatus(msg, cls) {
-      statusEl.textContent = msg;
-      statusEl.className = cls || "muted";
+      const el = document.getElementById("status");
+      el.textContent = msg;
+      el.className = cls || "";
     }
-    function showDebug(obj) {
-      debugEl.style.display = "block";
-      try { debugEl.textContent = typeof obj === "string" ? obj : JSON.stringify(obj, null, 2); }
-      catch(e) { debugEl.textContent = String(obj); }
-    }
-    function finishOk(msg) {
-      setStatus(msg || "✅ Instalación completada. Puedes cerrar esta ventana.", "ok");
+
+    function finishInstallOk(note) {
+      setStatus(note || "✅ Instalación completada. Puedes cerrar esta ventana.", "ok");
       try { BX24.installFinish(); } catch (e) {}
     }
-    function finishErr(msg, extra) {
-      setStatus("❌ " + msg, "err");
-      if (extra) showDebug(extra);
+
+    function finishInstallError(err) {
+      console.error(err);
+      setStatus("❌ Error instalando: " + (err && err.error_description ? err.error_description : JSON.stringify(err)), "err");
     }
 
-    function waitForBX24(timeoutMs = 12000) {
-      const start = Date.now();
-      setStatus("Cargando BX24…", "muted");
-      const timer = setInterval(() => {
-        if (window.BX24 && typeof window.BX24.init === "function") {
-          clearInterval(timer);
-          boot();
+    BX24.init(function () {
+      // Intentamos bind de la pestaña del Deal
+      BX24.callMethod("placement.bind", {
+        PLACEMENT: "CRM_DEAL_TAB",
+        HANDLER: HANDLER_URL,
+        TITLE: "Solicitud CIRBE",
+        DESCRIPTION: "Generador CIRITE dentro del Deal"
+      }, function (res) {
+
+        // Si la llamada en sí “falló”:
+        if (res.error && res.error()) {
+          const err = res.error();
+          const desc = (err && (err.error_description || err.error)) ? (err.error_description || err.error) : "";
+
+          // ✅ Caso típico: ya estaba creado → lo tratamos como éxito
+          if (String(desc).toLowerCase().includes("already binded")) {
+            finishInstallOk("ℹ️ La pestaña ya existía (“already binded”). Instalación marcada como correcta.");
+            return;
+}
+        );
+
+          // Otros errores reales
+          finishInstallError(err);
           return;
         }
-        if (Date.now() - start > timeoutMs) {
-          clearInterval(timer);
-          finishErr("BX24 no está disponible dentro del iframe (no cargó la librería).", {
-            hint: "Revisa consola (F12) por bloqueos de red/CSP.",
-            loadedBX24: !!window.BX24
-          });
-        }
-      }, 200);
-    }
 
-    function boot() {
-      setStatus("BX24 cargado. Inicializando app…", "muted");
-      BX24.init(function () {
-        setStatus("Registrando pestaña en CRM (placement.bind)…", "muted");
-
-        // ✅ ESTE ES EL CAMBIO CLAVE:
-        BX24.callMethod("placement.bind", {
-          PLACEMENT: "CRM_DEAL_DETAIL_TAB",
-          HANDLER: HANDLER_URL,
-          TITLE: "Solicitud CIRBE",
-          DESCRIPTION: "Generador CIRITE dentro del Deal"
-        }, function (res) {
-
-          if (res.error && res.error()) {
-            const err = res.error();
-            const desc = (err && (err.error_description || err.error)) ? (err.error_description || err.error) : "";
-
-            if (String(desc).toLowerCase().includes("already binded")) {
-              finishOk("ℹ️ La pestaña ya existía (“already binded”). Instalación marcada como correcta.");
-              return;
-            }
-            if (String(desc).toLowerCase().includes("insufficient_scope")) {
-              finishErr("Permisos insuficientes: activa 'CRM' y 'Incorporación de aplicaciones (placement)'. Luego reinstala.", err);
-              return;
-            }
-            finishErr("Error en placement.bind", err);
-            return;
-          }
-
-          finishOk("✅ Pestaña creada/actualizada y app instalada. Puedes cerrar esta ventana.");
-        });
-      });
-    }
-
-    waitForBX24();
-  </script>
+        // Éxito normal
+        finishInstallOk("✅ Pestaña creada y app instalada. Puedes cerrar esta ventana.");
+});
+    })();
+    });
+</script>
 </body>
-</html>`;
-}
+</html>
