--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -201,29 +200,43 @@
       showBanner('Modo standalone — introduce webhook e ID del deal','yellow');
       return;
     }
+    showBanner('Conectando con Bitrix24...','yellow');
     BX24.init(function(){
       BX24_READY=true;
       const wb=document.getElementById('webhookBlock');
       if(wb) wb.style.display='none';
 
-      // 1) placement.info
+      // 1) placement.info — captura el ID del deal desde el contexto del placement
       try {
         const pl=BX24.placement.info();
         const opts=(pl&&pl.options)?pl.options:{};
-        const pid=opts.ID||opts.ENTITY_ID||opts.id||opts.dealId||null;
+        // Bitrix pasa el ID del deal como "ID" en las opciones del placement
+        const pid=opts.ID||opts.ENTITY_ID||opts.id||opts.entityId||opts.dealId||null;
         if(pid){applyDealId(pid);BX24.fitWindow();return;}
+      } catch(e){
+        console.warn('placement.info error:',e);
+      }
+
+      // 2) Leer el ID desde la URL del parent (por si está en la URL del deal)
+      try {
+        const parentUrl = document.referrer || window.location.href;
+        const m = parentUrl.match(/deal\/details\/(\d+)/);
+        if(m&&m[1]){applyDealId(m[1]);BX24.fitWindow();return;}
       } catch(e){}
 
-      // 2) crm.deal.current.get
-      BX24.callMethod('crm.deal.current.get',{},function(res){
-        if(!res.error()){
-          const d=res.data?res.data():null;
-          if(d&&d.ID){applyDealId(d.ID);BX24.fitWindow();return;}
-        }
-        showBanner('BX24 listo · Introduce el ID de la negociación manualmente','yellow');
-        BX24.fitWindow();
-      });
+      // 3) Fallback: pedir al usuario que introduzca el ID manualmente
+      showBanner('BX24 listo · Introduce el ID de la negociación manualmente','yellow');
+      BX24.fitWindow();
     });
+
+    // Si BX24.init no dispara en 5 segundos, marcar como listo de todas formas
+    setTimeout(function(){
+      if(!BX24_READY && typeof BX24!=='undefined'){
+        BX24_READY=true;
+        console.warn('BX24.init timeout — forzando BX24_READY=true');
+        showBanner('BX24 detectado (init lento) · Introduce el ID manualmente','yellow');
+      }
+    },5000);
   }
 
   window.addEventListener('load',function(){
@@ -270,7 +283,7 @@
     document.getElementById('loadedData').innerHTML='';
     try {
       let deal;
-      if(typeof BX24!=='undefined'&&BX24_READY){
+      if(typeof BX24!=='undefined'){if(!BX24_READY){BX24_READY=true;const wb2=document.getElementById('webhookBlock');if(wb2)wb2.style.display='none';}
         deal=await bx24Call('crm.deal.get',{id:Number(dealId)});
       } else {
         const webhookUrl=document.getElementById('webhookUrl').value.trim();
